--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2015.06.03, v1.0.2
+
+feature:
+- (package) execon v1.2.0
+- (package) v1.0.1
+- (package) execon v1.1.0
+
+
 2015.01.15, v1.0.1
 
 feature:
